--- a/Manulife Account/Controllers/AccountsViewController.storyboard
+++ b/Manulife Account/Controllers/AccountsViewController.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--HI-->
+        <!--Accounts View Controller-->
         <scene sceneID="gf5-i4-j33">
             <objects>
                 <viewController storyboardIdentifier="AccountsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="i0y-xc-zMo" customClass="AccountsViewController" customModule="Manulife_Account" customModuleProvider="target" sceneMemberID="viewController">
@@ -36,7 +36,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="MxL-17-7Fy"/>
                     </view>
-                    <navigationItem key="navigationItem" title="HI" id="MFh-eW-qm3">
+                    <navigationItem key="navigationItem" id="MFh-eW-qm3">
                         <barButtonItem key="rightBarButtonItem" title="Quit" id="qKW-dH-Fly">
                             <connections>
                                 <action selector="quitAccounts:" destination="i0y-xc-zMo" id="vxH-cp-Pcj"/>
